--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -53,9 +53,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/viewRoom"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_marginTop="10dp"
-            android:layout_height="400dp"
-            app:layout_constraintTop_toBottomOf="@id/btnAddRoom"/>
+            app:layout_constraintTop_toBottomOf="@id/btnAddRoom"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
