--- a/app/src/main/res/layout/dial_quit.xml
+++ b/app/src/main/res/layout/dial_quit.xml
@@ -22,7 +22,7 @@
 
 
         <Button
-            android:id="@+id/btnQuit"
+            android:id="@+id/btnQuitDialYes"
             android:layout_width="56dp"
             android:layout_height="33dp"
             android:text="예"
@@ -30,10 +30,10 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/btnQuitExit"/>
+            app:layout_constraintRight_toLeftOf="@id/btnQuitDialNo"/>
 
         <Button
-            android:id="@+id/btnQuitExit"
+            android:id="@+id/btnQuitDialNo"
             android:layout_width="56dp"
             android:layout_height="33dp"
             android:layout_marginRight="10dp"
