--- a/app/src/main/res/layout/dial_shop.xml
+++ b/app/src/main/res/layout/dial_shop.xml
@@ -7,12 +7,14 @@
     android:background="@drawable/layoutshape">
 
         <TextView
+            android:id="@+id/txtShopDial"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="구매 하기"
             android:layout_margin="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/imgShopDetail"
             />
 
         <ImageView
@@ -22,8 +24,8 @@
             tools:srcCompat="@tools:sample/avatars"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/txtShopDial"
+            app:layout_constraintBottom_toTopOf="@id/txtShopDetail"/>
 
         <TextView
             android:id="@+id/txtShopDetail"
@@ -33,7 +35,14 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgShopDetail"
-            app:layout_constraintBottom_toTopOf="@id/btnShopBuy"/>
+            app:layout_constraintBottom_toTopOf="@id/guideShopDial"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideShopDial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.7"/>
 
         <Button
             android:id="@+id/btnShopBuy"
@@ -43,8 +52,9 @@
             android:layout_marginBottom="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtShopDetail"
+            app:layout_constraintTop_toBottomOf="@id/guideShopDial"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
 
         <Button
             android:id="@+id/btnShopExit2"
