--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -71,7 +71,7 @@
                 style="?android:borderlessButtonStyle" />
 
             <Button
-                android:id="@+id/btnQuit"
+                android:id="@+id/btnQuitDialYes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="회원 탈퇴"
