--- a/app/src/main/res/layout/dial_player2.xml
+++ b/app/src/main/res/layout/dial_player2.xml
@@ -1,6 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/layoutshape">
+
+    <TextView
+        android:id="@+id/txtPlayerDial2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="n번 플레이어 자리를 어떻게 할까요?"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guidePlayerDial"
+        />
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidePlayerDial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7"/>
+
+    <Button
+        android:id="@+id/btnAddBot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="봇 추가"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnPlayerLock"
+        app:layout_constraintTop_toBottomOf="@id/guidePlayerDial"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/btnPlayerLock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="잠그기"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guidePlayerDial"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/btnPlayerExit2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="뒤로가기"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintLeft_toRightOf="@id/btnPlayerLock"
+        app:layout_constraintTop_toTopOf="@id/btnPlayerLock"
+        app:layout_constraintBottom_toBottomOf="@id/btnPlayerLock"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
