--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -82,27 +82,36 @@
                     android:layout_marginBottom="10dp"
                     android:src="@drawable/layoutshape" />
 
+                <Space
+                    android:layout_width="15dp"
+                    android:layout_height="wrap_content"/>
+
                 <ImageView
                     android:id="@+id/imgPlayer2"
                     android:layout_width="60dp"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginBottom="10dp"
                     android:src="@drawable/layoutshape"/>
+
+                <Space
+                    android:layout_width="15dp"
+                    android:layout_height="wrap_content"/>
 
                 <ImageView
                     android:id="@+id/imgPlayer3"
                     android:layout_width="60dp"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginBottom="10dp"
                     android:src="@drawable/layoutshape"/>
+
+                <Space
+                    android:layout_width="15dp"
+                    android:layout_height="wrap_content"/>
 
                 <ImageView
                     android:id="@+id/imgPlayer4"
                     android:layout_width="60dp"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginBottom="10dp"
                     android:src="@drawable/layoutshape"/>
 
@@ -120,6 +129,10 @@
                     android:layout_marginBottom="10dp"
                     android:layout_gravity="center"/>
 
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
                 <TextView
                     android:id="@+id/txtPlayer2"
                     android:layout_width="wrap_content"
@@ -127,12 +140,20 @@
                     android:layout_marginBottom="10dp"
                     android:layout_gravity="center"/>
 
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
                 <TextView
                     android:id="@+id/txtPlayer3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:layout_gravity="center"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
                 <TextView
                     android:id="@+id/txtPlayer4"
@@ -156,27 +177,36 @@
                     android:layout_marginBottom="10dp"
                     />
 
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
                 <ImageView
                     android:id="@+id/imgPlayer6"
                     android:layout_width="60dp"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginBottom="10dp"
                     android:src="@drawable/layoutshape"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
                 <ImageView
                     android:id="@+id/imgPlayer7"
                     android:layout_width="60dp"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginBottom="10dp"
                     android:src="@drawable/layoutshape"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
                 <ImageView
                     android:id="@+id/imgPlayer8"
                     android:layout_width="60dp"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_marginBottom="10dp"
                     android:src="@drawable/layoutshape"/>
 
@@ -193,17 +223,29 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"/>
 
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
                 <TextView
                     android:id="@+id/txtPlayer6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"/>
 
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
                 <TextView
                     android:id="@+id/txtPlayer7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
                 <TextView
                     android:id="@+id/txtPlayer8"
