--- a/app/src/main/res/layout/dial_player2.xml
+++ b/app/src/main/res/layout/dial_player2.xml
@@ -11,10 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="n번 플레이어 자리를 어떻게 할까요?"
-        android:layout_margin="20dp"
+        android:textSize="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guidePlayerDial"
+        app:layout_constraintVertical_bias="0.2"
         />
 
 
